--- a/Untitled.app/Contents/Info.plist
+++ b/Untitled.app/Contents/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string>PlayerIcon.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>unity.DefaultCompany.Tomb of Terror</string>
+	<string>unity.DefaultCompany.Tomb-of-Terror</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
